Add support for input and matplotlib

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply px-5 py-1.5 bg-teal-900 text-white hover:bg-teal-950 transition-colors;
+  }
+}
+
+button.fa.matplotlib-toolbar-button {
+  @apply btn border-none text-base rounded-none mr-2;
+}
